Added the test-smtp.pl command for validating mail server relaying and logins.
---- Changes since 3.50 ----
Upgraded the SquirrelMail script installer to version 1.4.13, phpBB to 3.0.0 (and fixed a module bug), TikiWiki to 1.9.9, Gallery to 2.2.4, Xoops to 2.0.18, WordPress to 2.3.2, and Mantis to 1.1.0.
Upgraded the ZenPhoto installer to version 1.1.3, and made it more automated.
Removed the Squirrelmail 1.5.1 version, as it is no longer available for download.
Only run clamscan once to verify that it is working, rather than after every configuration change.
Include the total backup time in the scheduled backup email.
Added a script installer for RoundCube, a new IMAP webmail client with a nicer user interface than Squirrelmail.
Added back the old one-file-per-domain backup format, which is more friendly to rsyncing the home directory separately.
Moved the default quota for mailboxes to the 'Mail for domain' section of templates.
Shell special characters like ; and & are no longer allowed in mailbox usernames.
When selecting a database for a script, the default is now to use a new DB if possible.
When installing a script that uses authentication, you can now enter a username and/or password instead of it being setup to use the domain's login details by default. Similarly, the install-script.pl command now has optional --user and --pass parameters.
When using Postfix with the sender_bcc_maps directive, a new option on the Module Config page can be used to allow BCCing all sent email in some or all domains to a separate address. This can be set on the Email Settings page, or by default for new domains in Server Templates. It can also be changed on the command line with the new modify-mail.pl script.
Removed the modify-aliascopy.pl command-line program, as it's features have been included in modify-mail.pl.